crates/constat-policy/tests/snapshots/explain_snapshots__echec_ssh_root.snap
---
source: crates/constat-policy/tests/explain_snapshots.rs
expression: explain(&ev)
---
SSH-ROOT — la connexion root en SSH est désactivée
Machine : srv-app-01
NON CONFORME sur la période du 01/01/2026 au 31/03/2026.
  Couverture : 99,2 % — écart maximal entre deux collectes : 26 h
  3 interruptions déclarées :
    - 12/02/2026 03h00 → 12/02/2026 07h12  (machine arrêtée)
    - 28/02/2026 14h00 → 28/02/2026 14h45  (agent indisponible)
    - 03/03/2026 01h00 → 03/03/2026 09h30  (agent indisponible)
  1 violation :
    - srv-app-01 · service:sshd
      observé : « yes » — attendu : ≠ « yes »
      pourquoi : valeur interdite « yes » observée pour « sshd.PermitRootLogin » — la règle exige : jamais « yes »
      constaté du 03/03/2026 01h00 au 05/03/2026 09h30
      preuve : blob 7f7f7f7f…
